{
  "version": 4,
  "terraform_version": "1.7.1",
  "serial": 117,
  "lineage": "e2c60576-5e6a-912f-2c26-96cee510bd36",
  "resources": [
    {
      "module": "module.igw",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:internet-gateway/igw-0e5f8352d472446ce",
            "id": "igw-0e5f8352d472446ce",
            "owner_id": "378331682224",
            "tags": {
              "Name": "tf-igw"
            },
            "tags_all": {
              "Name": "tf-igw"
            },
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_launch",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01073d8de60cb1dfa",
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:instance/i-099bc010cfa3370d6",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-099bc010cfa3370d6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tokyo_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05040496cfd29f787",
            "private_dns": "ip-10-0-8-168.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.8.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08f24449436972c78",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d4cbe61602718065"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-05618ae62eea6be53",
            "tags": {
              "Name": "tf-private-1",
              "count": "2"
            },
            "tags_all": {
              "Name": "tf-private-1",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4cbe61602718065"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.my_security_group",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01073d8de60cb1dfa",
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:instance/i-08528bcbb719e86c9",
            "associate_public_ip_address": false,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08528bcbb719e86c9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tokyo_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-048a76ce2ef1798c1",
            "private_dns": "ip-10-0-80-141.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.80.141",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-067031688329fb630",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d4cbe61602718065"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0d7cb3f7a0e4856",
            "tags": {
              "Name": "tf-private-2",
              "count": "2"
            },
            "tags_all": {
              "Name": "tf-private-2",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4cbe61602718065"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.my_security_group",
            "module.subnet.aws_subnet.private_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.instance_launch",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01073d8de60cb1dfa",
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:instance/i-0b6faa6d623cbfa9e",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b6faa6d623cbfa9e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tokyo_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a49762903901c833",
            "private_dns": "ip-10-0-181-217.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.181.217",
            "public_ip": "13.115.29.123",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0980b1e625eef1804",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d4cbe61602718065"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0669598ca5ed8f82f",
            "tags": {
              "Name": "tf-public-1",
              "count": "2"
            },
            "tags_all": {
              "Name": "tf-public-1",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4cbe61602718065"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.my_security_group",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01073d8de60cb1dfa",
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:instance/i-0dd8c96356dc2cb34",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0dd8c96356dc2cb34",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tokyo_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00795dd96e96b9db8",
            "private_dns": "ip-10-0-209-55.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.209.55",
            "public_ip": "18.182.45.13",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-04c6c2f880a6f55db",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0d4cbe61602718065"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07020766f9c861e1a",
            "tags": {
              "Name": "tf-public-2",
              "count": "2"
            },
            "tags_all": {
              "Name": "tf-public-2",
              "count": "2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d4cbe61602718065"
            ]
          },
          "dependencies": [
            "module.ami_image.data.aws_ami.images",
            "module.sec_groups.aws_security_group.my_security_group",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc23366d1bfbcb85",
            "domain": "vpc",
            "id": "eipalloc-0dc23366d1bfbcb85",
            "network_border_group": "ap-northeast-1",
            "public_dns": "ec2-35-73-79-196.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "35.73.79.196",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.nat",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "mynat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc23366d1bfbcb85",
            "association_id": "eipassoc-0bde997496836dd8d",
            "connectivity_type": "public",
            "id": "nat-0e359437f1f3e400d",
            "network_interface_id": "eni-0870a5defbb1e6912",
            "private_ip": "10.0.155.156",
            "public_ip": "35.73.79.196",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0669598ca5ed8f82f",
            "tags": {
              "Name": "tf-nat"
            },
            "tags_all": {
              "Name": "tf-nat"
            }
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:route-table/rtb-05b3abe6408417bbd",
            "id": "rtb-05b3abe6408417bbd",
            "owner_id": "378331682224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0e359437f1f3e400d",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-private-route"
            },
            "tags_all": {
              "Name": "tf-private-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.mynat",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:route-table/rtb-090c54c844cbbd749",
            "id": "rtb-090c54c844cbbd749",
            "owner_id": "378331682224",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5f8352d472446ce",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "tf-public-route"
            },
            "tags_all": {
              "Name": "tf-public-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.igw.aws_internet_gateway.myigw",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a7e669a0e33cd2c0",
            "route_table_id": "rtb-05b3abe6408417bbd",
            "subnet_id": "subnet-05618ae62eea6be53"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.mynat",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dd127b615d6bd577",
            "route_table_id": "rtb-05b3abe6408417bbd",
            "subnet_id": "subnet-0f0d7cb3f7a0e4856"
          },
          "dependencies": [
            "module.nat.aws_eip.nat_eip",
            "module.nat.aws_nat_gateway.mynat",
            "module.route_table.aws_route_table.private_route_table",
            "module.subnet.aws_subnet.private_subnets",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aeb810529bb4869c",
            "route_table_id": "rtb-090c54c844cbbd749",
            "subnet_id": "subnet-0669598ca5ed8f82f"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.myigw",
            "module.route_table.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0567181b643abd2de",
            "route_table_id": "rtb-090c54c844cbbd749",
            "subnet_id": "subnet-07020766f9c861e1a"
          },
          "dependencies": [
            "module.igw.aws_internet_gateway.myigw",
            "module.route_table.aws_route_table.public_route_table",
            "module.subnet.aws_subnet.public_subnets",
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.sec_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:security-group/sg-0d4cbe61602718065",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4cbe61602718065",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf-sg",
            "name_prefix": "",
            "owner_id": "378331682224",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:subnet/subnet-05618ae62eea6be53",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05618ae62eea6be53",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378331682224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pri-subnet-1"
            },
            "tags_all": {
              "Name": "tf-pri-subnet-1"
            },
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:subnet/subnet-0f0d7cb3f7a0e4856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0d7cb3f7a0e4856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "378331682224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pri-subnet-2"
            },
            "tags_all": {
              "Name": "tf-pri-subnet-2"
            },
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:subnet/subnet-0669598ca5ed8f82f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0669598ca5ed8f82f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378331682224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pub-subnet-1"
            },
            "tags_all": {
              "Name": "tf-pub-subnet-1"
            },
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:subnet/subnet-07020766f9c861e1a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.192.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07020766f9c861e1a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "378331682224",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tf-pub-subnet-2"
            },
            "tags_all": {
              "Name": "tf-pub-subnet-2"
            },
            "vpc_id": "vpc-04938f6b19bf08c92"
          },
          "dependencies": [
            "module.vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:378331682224:vpc/vpc-04938f6b19bf08c92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080b325d21e3b64cb",
            "default_route_table_id": "rtb-02d2cfb1510ad2eea",
            "default_security_group_id": "sg-0395e916568572597",
            "dhcp_options_id": "dopt-0d201fa2e4240eff1",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04938f6b19bf08c92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02d2cfb1510ad2eea",
            "owner_id": "378331682224",
            "tags": {
              "Name": "tf-vpc"
            },
            "tags_all": {
              "Name": "tf-vpc"
            }
          }
        }
      ]
    }
  ]
}